--- a/src/css/global.css
+++ b/src/css/global.css
@@ -42,3 +42,7 @@ h5 {
   font-size: 1rem;
   line-height: 100%;
 }
+
+img {
+  max-width: 100%;
+}
